 + (Locale) Added locale strings for Unarmed's Block Cracker SubSkill
 - (Locale) Removed localizations with the following codes for being almost empty: id, HR_hr, et_EE, lv, lt, no, pl_PL, pt_PT, tr_TR
 - (Config) Removed SkillShot's IncreaseLevel & IncreasePercentage (replaced by RankDamageMultiplier)
 - (Config) Removed AxeMastery's MaxBonus & MaxBonusLevel (replaced by RankDamageMultiplier)
 = (Plugin Compatibility) mcMMO now fires new custom events relating to changes it makes to player scoreboards, plugin authors can listen to these events to improve compatibility
 = (Items) Chimaera Wing now tracks cooldowns between sessions for players (no more disconnect abuse)
 = (Skills) Added missing mushroom blocks to experience.yml defaults
 = (Skills) Tridents will no longer be considered unarmed
 = (MySQL) You can now inspect offline players
 = (MySQL) When converting from MySQL to flatfile mcMMO will now properly include all users in the conversion process
 + (Party) Parties can now have size limits (configurable in config.yml), party size is unlimited by default
 ! (Item) Improved some of the messages sent to the player regarding the Chimaera Wing
 ! (Party) Party member list will only include members of the party that you can see (aren't vanished)
 ! (Skills) Some skill level rank requirements have changed
 ! (Skills) Fixed an edge case bug where Blast Mining wouldn't inform the player that it was on cooldown
 ! (Skills) mcMMO skills will now be on a scale from 1-100 instead of 0-1000 (for existing mcMMO installs this is opt-in and off by default)
 ! (Skills) Skill Super Powers (Tree Feller, etc...) will now require level 10+ to use
 ! (Skills) Acrobatics' Roll exploit detection was tweaked to still allow for Roll to trigger even if it rewards no XP
 ! (Skills) Acrobatics' Roll & Gracefull Roll are now considered the same skill (both mechanics are still there)
 ! (Skills) Woodcutting's Double Drop subskill is now named Harvest Lumber